--- a/build.xml
+++ b/build.xml
@@ -91,7 +91,7 @@
         </junit>
     </target>
 
-    <taskdef resource="net/sf/antcontrib/antcontrib.properties">
+    <taskdef resource="net/sf/antcontrib/antlib.xml">
         <classpath>
             <pathelement location="ant-contrib-1.0b3.jar"/>
         </classpath>
@@ -104,7 +104,74 @@
     </target>
 
     <target name="history">
+        <exec executable="git" outputproperty="commits.count">
+            <arg value="rev-list"/>
+            <arg value="--count"/>
+            <arg value="HEAD"/>
+        </exec>
 
+        <exec executable="git" outputproperty="current.commit">
+            <arg value="rev-parse"/>
+            <arg value="HEAD"/>
+        </exec>
+
+        <exec executable="git" outputproperty="current.work_diff">
+            <arg value="diff"/>
+            <arg value="HEAD"/>
+        </exec>
+
+        <if>
+            <length string="${current.work_diff}" length="0" trim="true" when="greater"/>
+            <then>
+                <fail message="Working tree should not have changes"/>
+            </then>
+        </if>
+
+        <trycatch>
+            <try>
+                <for param="i" begin="1" end="${commits.count}">
+                    <sequential>
+                        <trycatch>
+                            <try>
+                                <antcall target="compile"/>
+                                <property name="breakProperty" value="true"/>
+                            </try>
+                            <catch>
+                                <exec executable="git" outputproperty="previous.commit">
+                                    <arg value="rev-parse"/>
+                                    <arg value="HEAD"/>
+                                </exec>
+                                <echo>Error in compile target</echo>
+                                <exec executable="git">
+                                    <arg value="reset"/>
+                                    <arg value="--hard"/>
+                                    <arg value="HEAD~1"/>
+                                </exec>
+                            </catch>
+                            <finally>
+                                <fail if="breakProperty"/>
+                            </finally>
+                        </trycatch>
+                    </sequential>
+                </for>
+            </try>
+            <catch>
+                <echo>Finally</echo>
+            </catch>
+            <finally>
+                <if>
+                    <isset property="previous.commit"/>
+                    <then>
+                        <exec executable="git">
+                            <arg value="diff"/>
+                            <arg value="${previous.commit}"/>
+                            <redirector output="diff.txt" alwayslog="true"/>
+                        </exec>
+                    </then>
+                </if>
+                <echo>Original commit: ${current.commit}</echo>
+            </finally>
+        </trycatch>
     </target>
 
 </project>
