--- a/build.xml
+++ b/build.xml
@@ -150,7 +150,7 @@
                             </catch>
                             <finally>
                                 <echo>Well done</echo>
-<!--                                <fail if="breakProperty"/>-->
+                                <fail if="breakProperty"/>
                             </finally>
                         </trycatch>
                     </sequential>
