--- a/build.xml
+++ b/build.xml
@@ -137,16 +137,16 @@
                                 <property name="breakProperty" value="true"/>
                             </try>
                             <catch>
-<!--                                <exec executable="git" outputproperty="previous.commit">-->
-<!--                                    <arg value="rev-parse"/>-->
-<!--                                    <arg value="HEAD"/>-->
-<!--                                </exec>-->
-<!--                                <echo>Error in compile target</echo>-->
-<!--                                <exec executable="git">-->
-<!--                                    <arg value="reset"/>-->
-<!--                                    <arg value="&#45;&#45;hard"/>-->
-<!--                                    <arg value="HEAD~1"/>-->
-<!--                                </exec>-->
+                                <exec executable="git" outputproperty="previous.commit">
+                                    <arg value="rev-parse"/>
+                                    <arg value="HEAD"/>
+                                </exec>
+                                <echo>Error in compile target</echo>
+                                <exec executable="git">
+                                    <arg value="reset"/>
+                                    <arg value="--hard"/>
+                                    <arg value="HEAD~1"/>
+                                </exec>
                             </catch>
                             <finally>
                                 <fail if="breakProperty"/>
@@ -155,22 +155,22 @@
                     </sequential>
                 </for>
             </try>
-<!--            <catch>-->
-<!--                <echo>Finally</echo>-->
-<!--            </catch>-->
-<!--            <finally>-->
-<!--                <if>-->
-<!--                    <isset property="previous.commit"/>-->
-<!--                    <then>-->
-<!--                        <exec executable="git">-->
-<!--                            <arg value="diff"/>-->
-<!--                            <arg value="${previous.commit}"/>-->
-<!--                            <redirector output="diff.txt" alwayslog="true"/>-->
-<!--                        </exec>-->
-<!--                    </then>-->
-<!--                </if>-->
-<!--                <echo>Original commit: ${current.commit}</echo>-->
-<!--            </finally>-->
+            <catch>
+                <echo>Finally</echo>
+            </catch>
+            <finally>
+                <if>
+                    <isset property="previous.commit"/>
+                    <then>
+                        <exec executable="git">
+                            <arg value="diff"/>
+                            <arg value="${previous.commit}"/>
+                            <redirector output="diff.txt" alwayslog="true"/>
+                        </exec>
+                    </then>
+                </if>
+                <echo>Original commit: ${current.commit}</echo>
+            </finally>
         </trycatch>
     </target>
 
