--- a/build.xml
+++ b/build.xml
@@ -149,8 +149,7 @@
 <!--                                </exec>-->
                             </catch>
                             <finally>
-                                <echo>Well done</echo>
-<!--                                <fail if="breakProperty"/>-->
+                                <fail if="breakProperty"/>
                             </finally>
                         </trycatch>
                     </sequential>
