--- a/build.xml
+++ b/build.xml
@@ -170,6 +170,7 @@
                     </then>
                 </if>
                 <echo>Original commit: ${current.commit}</echo>
+                <echo>Current commit: ${previous.commit}</echo>
             </finally>
         </trycatch>
     </target>
